--- a/style/main.css
+++ b/style/main.css
@@ -15,6 +15,8 @@ body{
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
     background-color: #141414;
     background-image: url(/img/suits-bg.jpg);
+    background-repeat: no-repeat;
+    z-index: -1;
 }
 
 .background-image{
@@ -37,6 +39,11 @@ header nav{
     margin-left: 25px;
 }
 
+header:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: 2s ease all;
+}
+
 header nav a{
     text-decoration: none;
     color: #e5e5e5;
@@ -46,6 +53,16 @@ header nav a{
 
 header nav a:hover{
     color: rgba(255,255,255,0.75);
+}
+
+header .rightnav{
+    margin-left: 55%;
+}
+
+header .rightnav i{
+    font-size: large;
+    margin-left: 10px;
+    text-shadow: 2px 2px 4px rgb(0 0 0 / 100%);
 }
 
 /*filme principal*/
@@ -71,16 +88,15 @@ header nav a:hover{
     font-size: 1.2vw;
     font-weight: 400px;
     line-height: normal;
-    width: 100%;
     color: #fff;
-    text-shadow: 2px 2px 4px rgb(0 0 0 / 45%);
+    text-shadow: 2px 2px 4px rgb(0 0 0 / 100%);
     margin-bottom: 1%;
     margin-top: 2%;
 }
 
-.titulo{
-    margin-top: 45%;
+.titulo img{
     width: 100%;
+    margin-top: 45%;
     transform-origin: bottom left;
 }
 
@@ -128,4 +144,8 @@ header nav a:hover{
     display: block;
     border-radius: 1%;
     box-shadow: 2px 2px 4px rgb(0 0 0 / 75%);;
+}
+
+.carrousel-filmes{
+    margin-top: 5px;
 }
